test/semantic-errors/23.pas
program p;
procedure f(var r:real);
begin writeln(1)end;
begin f(2.0)end.
